Add option for /explore redirect, fixes #3

--- a/src/options.html
+++ b/src/options.html
@@ -14,6 +14,11 @@
         <input placeholder="https://mastodon.social" type="url" id="url" name="url" />
       </label>
       <br />
+      <label>
+        <input type="checkbox" id="redirect_explore" name="redirect_explore" />
+        <b>Redirect /explore to /home</b>
+      </label>
+      <br />
       <button type="submit">Save</button>
       <br />
       <p id="saved" style="display: none;color:green;">Saved!</p>
